--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,6 @@ node_modules/
 # Папка с собранными файлами проекта
 build/
 
-# Папка с собранными файлами проекта
+# Файлы сборки
 public/bundle.js
 public/bundle.js.map
